k8s/sample-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-site
  labels:
    app: sample-site
spec:
  selector:
    app: sample-site
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
