k8s/sample-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-site
  labels:
    app: sample-site
spec:
  rules:
  - host: sample-site.docker.localhost  # Replace with your domain
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: sample-site
            port:
              name: http
  # tls:
  # - hosts:
  #   - proxy.kdex.dev  # Replace with your domain
  #   secretName: kdex-proxy-tls  # Replace with your TLS secret name
